<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/i"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Tintos">

    <ScrollView
        android:layout_width="409dp"
        android:layout_height="729dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/bttintos"
                android:textAlignment="center"
                android:textSize="16pt" />

            <Spinner
                android:id="@+id/spinner3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="SpeakableTextPresentCheck" />

            <ImageView
                android:id="@+id/imgtinto1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/tinto1" />

            <TextView
                android:id="@+id/txtnometinto1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="10pt"
                tools:text="@string/nometinto1" />

            <TextView
                android:id="@+id/txtdesctinto1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/descricaotinto1"
                android:textAlignment="center"
                android:textSize="10pt" />

            <TextView
                android:id="@+id/txtprecotinto1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/precotinto1"
                android:textAlignment="center"
                android:textSize="10pt" />

            <ImageView
                android:id="@+id/imgtinto2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/tinto2" />

            <TextView
                android:id="@+id/txtnometinto2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nometinto2"
                android:textAlignment="center"
                android:textSize="10pt" />

            <TextView
                android:id="@+id/txtdesctinto2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/descricaotinto2"
                android:textAlignment="center"
                android:textSize="10pt" />

            <TextView
                android:id="@+id/txtprecotinto2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/precotinto2"
                android:textAlignment="center"
                android:textSize="10pt" />

            <ImageView
                android:id="@+id/imgtinto3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/tinto3"
                android:contentDescription="TODO" />

            <TextView
                android:id="@+id/txtnametinto3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nometinto3"
                android:textAlignment="center"
                android:textSize="10pt" />

            <TextView
                android:id="@+id/txtdesctinto3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/descricaotinto3"
                android:textAlignment="center"
                android:textSize="10pt" />

            <TextView
                android:id="@+id/txtprecotinto3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/precotinto3"
                android:textAlignment="center"
                android:textSize="10pt" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>