<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/btnhome"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="Item"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/btnsair"
        android:icon="@drawable/ic_baseline_exit_to_app_24"
        android:title="Item"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/idtintos"
        android:title="@string/bttintos" />
    <item
        android:id="@+id/idbrancos"
        android:title="@string/btbrancos" />
    <item
        android:id="@+id/idespirituosos"
        android:title="@string/btespirituosos" />
    <item
        android:id="@+id/idlicores"
        android:title="@string/idlicores" />
</menu>